이미지 경로 수정

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
       <!-- 로고 이미지 추가 -->
       <div class="navbar-logo">
         <img
-          src="/test/img/logo.png"
+          src="logo.png"
           style="height: 80px; margin-left: 300px"
         />
       </div>
@@ -387,7 +387,7 @@
                   <span class="close" onclick="closeModal()">&times;</span>
                   <span class="close-text" onclick="closeModal()">닫기</span>
                 </div>
-                <img src="/test/img/img.png" alt="Modal Image" />
+                <img src="img.png" alt="Modal Image" />
               </div>
             </div>
           </tr>
