--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                   <span class="close" onclick="closeModal()">&times;</span>
                   <span class="close-text" onclick="closeModal()">닫기</span>
                 </div>
-                <img src="img.png" alt="Modal Image" />
+                <img src="image 21.png" alt="Modal Image" />
               </div>
             </div>
           </tr>
